v0.6 - Pending
	+ Add support for playlists (save, load, queue, delete)
	+ Add Ctrl-U and Ctrl-Shift-U for updating library (see docs)
	+ (Re-)display systray icon if tray is (re-)opened
	+ Fix mpdclient3.py to return all playlist objects
	+ Bug: Delete key doesn't remove songs from playlist

v0.5.2 - September 15, 2006
	+ Correctly update interface after updating MPD library
	+ Interface prefs: show album art, show volume, sticky, above
	+ Behavior prefs: minimize to systray, stop playback on exit
	+ Increase iter time if connection timesout (to make gui responsive)
	+ Use gtk.STOCK_JUSTIFY_FILL instead of custom playlist icon
	+ Try gnome-open/exo-open first for opening help, then fallback
	+ Ability to set translations (see TRANSLATIONS file)
	+ Use dbus to prevent multiple instances
	+ More shortcuts (see documentation)
	+ Minor bugfixes

v0.5.1 - September 13, 2006
	+ Increment to mpdclient3 to prevent incompatibility issues
	+ Bug: Running Sonata without systray causes crash

v0.5 - September 12, 2006
	+ Added album art (and ability to choose from alternatives
	  if the one automatically selected is incorrect, via right-click)
	+ Integrate playlist and library into one app
	+ Change song progress with mousewheel over progressbar
	+ Change volume with mousewheel over volume button, systray icon
	+ Change volume icon based on volume level
	+ Added playback, etc, shortcuts
	+ Added Replace menu and dir/file icons to library browser
	+ Removed toolbar, cleaned up interface
	+ Removed horizontal scrollbar
	+ Don't update systray icon based on playback status
	+ Moved config to freedesktop.org standard
	+ Keep app width constant when (un)expanding
	+ Keep currently playing song visible in list
	+ Removed python-empy, glade
	+ Bug: mpdclient2/app doesn't accept passwords (crash)
	+ Bug: mdpclient2 - lsinfo skips the first file found after dirs
	+ Bug: Cannot remove multiple rows from right-click
	+ Bug: Crash if user has MPD connection but no read access